feat(TFP-5818): avslutt kobling og fjern inaktive grunnlag task. (#2636)
* TFP-5818: Legger inn en task som skal avslutte en kobling og så rydde opp i innaktive grunnlag.

* fix: fikser manglende ytelse type på kobling. Returner 204 hvis kobling mangler.

* review: erstattet task med direkt tjeneste kall.

* Test

* sonar + ny namespace for azure-token-generator